--- a/index.htm
+++ b/index.htm
@@ -186,7 +186,7 @@
 		<p>
 			<ul class="bullet-list">
 				<li>In the year 2019, I had the privilege of assuming the esteemed position of a
-				data analyst at Celery Company. Throughout my tenure, I diligently applied my expertise
+				data analyst at Karafs Company. Throughout my tenure, I diligently applied my expertise
 				in data analysis to extract meaningful insights, thereby contributing to the organization's growth and success.</li>
 				<li>Subsequently, in 2022, I embarked upon a new chapter in my professional journey,
 				assuming the role of a machine engineer at Farda Fan Pars Company. Within this distinguished
