--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,8 @@
 		.navbar {
 			position: fixed;
 			top: 0;
-			left: 31%;
+			left: 50%;
+			transform: translate(-50%, 0);
 			background-color: gray;
 			color: white;
 			padding: 10px;
