--- a/index.htm
+++ b/index.htm
@@ -230,7 +230,7 @@
 	<section id="contact">
 		<h2>Contact Me</h2>
 		<p>Email: <a href="mailto:iman.mirjafari@math.iut.ac.ir">iman.mirjafari@math.iut.ac.ir</a></p>
-		<p>Skype: <a href="skype:mirjafari.iman?chat">mirjafari.iman</a></p>
+		<p>Skype: <a href="skype:live:mirjafari.iman?chat">mirjafari.iman</a></p>
 	</section>
 </body>
 </html>
