--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
 			font-size: 18px;
 			text-align: center;
 			margin: -10px 0 0;
-			width: 60%;
+			width: 70%;
 			margin-left: auto;
 			margin-right: auto;
 			text-align: justify;
@@ -166,20 +166,13 @@
 		<img src="1.jpg" alt="My Image">
 		<div class="header-content">
 		<h1>Iman Mirjafari</h1>
-		<p>I completed my undergraduate studies at Isfahan University of Technology,
-		specializing in statistics, and achieving the esteemed third rank among my 
-		fellow scholars. The realm of numbers and mathematics captivated me from an 
-		early age, fostering a deep passion that flourished throughout my educational
-		journey, particularly during my high school years when I ventured into the realm 
-		of programming and composed my inaugural creation in the elegant language of Pascal.
-		Guided by a profound appreciation for the interconnectedness of statistics, computer
-		science, and mathematics, I made a deliberate choice to pursue this path at the university
-		level. Diligently undertaking a comprehensive array of courses, I embarked upon an intellectual
-		pilgrimage into the ethereal domains of machine learning and artificial intelligence.
-		Driven by an unyielding thirst for knowledge, I consistently ranked among the top students
-		, with a particular ardor for the enigmatic wonders of mathematics. Fuelled by an unwavering
-		commitment to intellectual inquiry, I find solace in the pursuit of research, diligently
-		illuminating unexplored avenues. </p>
+		<p>I completed my undergraduate studies in the field of statistics at Isfahan University of Technology,
+			where I ranked third among my peers. My interest in numbers and mathematics began in elementary
+			and high school, and it was during high school that I learned to program in Pascal. This led me
+			to choose statistics as my major in university, as it combined my passion for mathematics and
+			computer science.During my time at university, I took courses in machine learning, deep learning, 
+			and artificial intelligence, which further fueled my interest in these areas. I particularly enjoy
+			collaborative work and enthusiastically embrace projects that explore new avenues within my field of expertise. </p>
 		</div>
 	</header>
 	<section id="experiences">
