--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
 			font-size: 18px;
 			text-align: center;
 			margin: -10px 0 0;
-			width: 70%;
+			width: 65%;
 			margin-left: auto;
 			margin-right: auto;
 			text-align: justify;
@@ -179,22 +179,13 @@
 		<h2>Experiences</h2>
 		<p>
 			<ul class="bullet-list">
-				<li>In the year 2019, I had the privilege of assuming the esteemed position of a
-				data analyst at Karafs Company. Throughout my tenure, I diligently applied my expertise
-				in data analysis to extract meaningful insights, thereby contributing to the organization's growth and success.</li>
-				<li>Subsequently, in 2022, I embarked upon a new chapter in my professional journey,
-				assuming the role of a machine engineer at Farda Fan Pars Company. Within this distinguished
-				capacity, I undertook intricate projects involving points cloud, leveraging my specialized knowledge 
-				and technical proficiency to propel the company's endeavors in this domain.</li>
-				<li>In the year 2023, I had the honor of serving as a teaching assistant in a data 
-				analysis course, where I imparted my expertise in Python programming. Guiding aspiring 
-				learners, I facilitated their comprehension and application of Python within the realm of
-				data analysis, fostering their growth and proficiency in this critical field.</li>
-				<li>Currently, my scholarly pursuits are centered around groundbreaking research 
-				in the realm of stochastic fractional differential equations. Under the sagacious
-				supervision of Dr. Javad Askari, an esteemed authority in the field, I am delving deep
-				into the intricacies of this captivating domain, endeavoring to expand the boundaries of 
-				knowledge and contribute to the advancement of scientific understanding.</li>
+				<li>In 2019, I had the privilege of assuming the esteemed position of Data Analyst at Karafs Company.</li>
+				<li>In 2022, I embarked on a new chapter in my professional journey by taking on the role of Machine Engineer
+					at Farda Fan Pars Company.</li>
+				<li>In 2023, I had the honor of serving as a teaching assistant for a data analysis course, where I shared
+					my expertise in Python programming.</li>
+				<li>Currently, I am conducting research in the field of Stochastic Fractional Differential Equations under
+					the supervision of Dr. Javad Askari.</li>
 			</ul>
 		</p>
 	</section>
@@ -214,11 +205,8 @@
 	</section>
 	<section id="personal">
 		<h2>Personal</h2>
-		<p>During my discretionary hours, I primarily engage in the consumption of cinematic productions and the appreciation
-		of musical compositions, with a particular fondness for the timeless allure of classical melodies. Additionally, I harbor
-		a keen interest in the realm of competitive sports, namely football and water polo, actively endeavoring to witness their
-		riveting encounters. Furthermore, when my intellectual cravings call for sustenance, I seek solace within the realm of literature,
-		immersing myself in the enriching verses of esteemed poets, most notably the captivating works of Rumi. </p>
+		<p>In my free time, I mainly watch movies, and I enjoy listening to music, particularly classical music. I have an interest in both
+			football and water polo, and occasionally, I indulge in reading poetry. One of my favorite poets is Rumi. </p>
 	</section>
 	<section id="contact">
 		<h2>Contact Me</h2>
