--- a/index.htm
+++ b/index.htm
@@ -172,7 +172,7 @@
 			to choose statistics as my major in university, as it combined my passion for mathematics and
 			computer science.During my time at university, I took courses in machine learning, deep learning, 
 			and artificial intelligence, which further fueled my interest in these areas. I particularly enjoy
-			collaborative work and enthusiastically embrace projects that explore new avenues within my field of expertise. </p>
+			teamwork and enthusiastically embrace projects that explore new avenues within my field of expertise. </p>
 		</div>
 	</header>
 	<section id="experiences">
