--- a/index.htm
+++ b/index.htm
@@ -51,14 +51,6 @@
 			align-items: center;
 		}
 
-		header img {
-			border-radius: 50%;
-			height: 300px;
-			width: 300px;
-			position: relative;
-			top: 0;
-			margin-bottom: 20px;
-		}
 
 		.header-content {
 			text-align: center;
@@ -163,7 +155,6 @@
 		<a data-section="contact">Contact Me</a>
 	</div>
 	<header id="header">
-		<img src="1.jpg" alt="My Image">
 		<div class="header-content">
 		<h1>Iman Mirjafari</h1>
 		<p>I completed my undergraduate studies in the field of statistics at Isfahan University of Technology,
@@ -175,6 +166,21 @@
 			teamwork and enthusiastically embrace projects that explore new avenues within my field of expertise. </p>
 		</div>
 	</header>
+	<section id="honors">
+		<h2>Honors</h2>
+		<p>
+			<ul class="bullet-list">
+				<li>Ranked third in the field of Statistics at Isfahan University of Technology.</li>
+				<li>In 2022, Selected member of the first stage of the Statistics Olympiad, a prestigious competition among the top students
+					of universities in Iran.</li>
+				<li>In 2022, Chosen as a member of the last stage of the Statistics Olympiad, a competition that included the first stage
+					winners of the Olympiad and the top candidates of the master’s degree entrance exam. Achieved a remarkable
+					20th rank.</li>
+				<li>In 2023, One of the top candidates in master’s degree entrance exam</li>
+			</ul>	
+				
+		</p>
+	</section>
 	<section id="experiences">
 		<h2>Experiences</h2>
 		<p>
@@ -187,20 +193,6 @@
 				<li>Currently, I am conducting research in the field of Stochastic Fractional Differential Equations under
 					the supervision of Dr. Javad Askari.</li>
 			</ul>
-		</p>
-	</section>
-	<section id="honors">
-		<h2>Honors</h2>
-		<p>
-			<ul class="bullet-list">
-				<li>Ranked third in the field of Statistics at Isfahan University of Technology.</li>
-				<li>Selected member of the first stage of the Statistics Olympiad, a prestigious competition among the top students
-					of universities in Iran.</li>
-				<li>Chosen as a member of the last stage of the Statistics Olympiad, a competition that included the first stage
-					winners of the Olympiad and the top candidates of the master’s degree entrance exam. Achieved a remarkable
-					20th rank.</li>
-			</ul>	
-				
 		</p>
 	</section>
 	<section id="personal">
