--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 		<a data-section="experiences">Experiences</a>
 		<a data-section="honors">Honors</a>
 		<a data-section="personal">Personal</a>
-		<a href="Resume-V.3.pdf" download>Resume</a>
+		<a href='last-version of resume.pdf' download>Resume</a>
 		<a data-section="contact">Contact Me</a>
 	</div>
 	<header id="header">
