--- a/index.htm
+++ b/index.htm
@@ -148,11 +148,11 @@
 	<div id="date"></div>
 	<div class="navbar">
 		<a data-section="header">Home</a>
-		<a data-section="experiences">Experiences</a>
 		<a data-section="honors">Honors</a>
+		<a data-section="experiences">Experiences</a>
 		<a data-section="personal">Personal</a>
 		<a href='last-version of resume.pdf' download>Resume</a>
-		<a data-section="contact">Contact Me</a>
+		<a data-section="contact">Contact</a>
 	</div>
 	<header id="header">
 		<div class="header-content">
