--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 		<a data-section="honors">Honors</a>
 		<a data-section="experiences">Experiences</a>
 		<a data-section="personal">Personal</a>
-		<a href='last-version of resume.pdf' download>Resume</a>
+		<a href='https://github.com/iman-mj/Iman/blob/main/last-version%20of%20resume.pdf' download>Resume</a>
 		<a data-section="contact">Contact</a>
 	</div>
 	<header id="header">
