--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 		<a data-section="honors">Honors</a>
 		<a data-section="experiences">Experiences</a>
 		<a data-section="personal">Personal</a>
-		<a href='last-version of resume.pdf' download='resume.pdf'>Resume</a>
+		<a href='Last-Update_of_resume.pdf' download='resume.pdf'>Resume</a>
 		<a data-section="contact">Contact</a>
 	</div>
 	<header id="header">
