--- a/index.htm
+++ b/index.htm
@@ -157,41 +157,27 @@
 	<header id="header">
 		<div class="header-content">
 		<h1>Iman Mirjafari</h1>
-		<p>I completed my undergraduate studies in the field of statistics at Isfahan University of Technology,
-			where I ranked third among my peers. My interest in numbers and mathematics began in elementary
-			and high school, and it was during high school that I learned to program in Pascal. This led me
-			to choose statistics as my major in university, as it combined my passion for mathematics and
-			computer science.During my time at university, I took courses in machine learning, deep learning, 
-			and artificial intelligence, which further fueled my interest in these areas. I particularly enjoy
-			teamwork and enthusiastically embrace projects that explore new avenues within my field of expertise. </p>
+		<p>👋 Hey there! I’m Iman, your friendly researcher who’s on a mission to combine vision with language — literally.
+			Currently diving into multimodal language models (think of it as teaching machines to be multi-talented) and
+			exploring how they can make sense of medical data.<br>I’m also an <i>"attention"</i> seeker (research-wise, of course), 
+			looking for optimized ways to reach the peak of machine learning greatness. With a solid mix of stats and computer 
+			science in my toolkit, I'm working to make complex data as understandable as a cat video (almost). </p>
 		</div>
 	</header>
 	<section id="honors">
 		<h2>Honors</h2>
 		<p>
-			<ul class="bullet-list">
-				<li>Ranked third in the field of Statistics at Isfahan University of Technology.</li>
-				<li>In 2022, Selected member of the first stage of the Statistics Olympiad, a prestigious competition among the top students
-					of universities in Iran.</li>
-				<li>In 2022, Chosen as a member of the last stage of the Statistics Olympiad, a competition that included the first stage
-					winners of the Olympiad and the top candidates of the master’s degree entrance exam. Achieved a remarkable
-					20th rank.</li>
-				<li>In 2023, One of the top candidates in master’s degree entrance exam</li>
-			</ul>	
-				
+			you’ll find all the honors in my resume. Give it a look — I promise, it’s not just graphs and equations!
 		</p>
 	</section>
 	<section id="experiences">
 		<h2>Experiences</h2>
 		<p>
 			<ul class="bullet-list">
-				<li>In 2019, I had the privilege of assuming the esteemed position of Data Analyst at Karafs Company.</li>
-				<li>In 2022, I embarked on a new chapter in my professional journey by taking on the role of Machine Engineer
-					at Farda Fan Pars Company.</li>
-				<li>In 2022, I had the honor of serving as a teaching assistant for a data analysis course, where I shared
-					my expertise in Python programming.</li>
-				<li>Currently, I am conducting research in the field of Stochastic Fractional Differential Equations under
-					the supervision of Dr. Javad Askari.</li>
+				<li>In 2022, I had the honor of serving as a Teaching Assistant for a data analysis course, where I shared
+					my expertise in Python programming at <a href="https://english.iut.ac.ir/">Isfahan University of Technology</a>.</li>
+				<li>In 2022, Computer Vision Intern at <a href="https://fardafan.com/">Farda Fan Pars</a>.</li>
+				<li>In 2019, Data Analytics Intern at <a href="https://karafsapp.com/">Karafs</a></li>
 			</ul>
 		</p>
 	</section>
@@ -202,7 +188,10 @@
 	</section>
 	<section id="contact">
 		<h2>Contact Me</h2>
-		<p>Email: <a href="mailto:iman.mirjafari@math.iut.ac.ir">iman.mirjafari@math.iut.ac.ir</a></p>
+		<p>Currently, I am a master's student at the School of Mathematics, Statistics, and Computer Science of <a href="https://ut.ac.ir/en">Tehran University</a>,
+			and you can contact me using one of the following methods.</p>
+		<p>Email: <a href="mailto:iman.mirjafari@ut.ac.ir">iman.mirjafari@ut.ac.ir</a></p>
+		<p>Gmail: <a href="mailto:iman.mirjafari.mj@gmail.com">iman.mirjafari.mj@gmail.com</a></p>
 		<p>Skype: <a href="skype:live:mirjafari.iman?chat">mirjafari.iman</a></p>
 	</section>
 </body>
