--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 		<a data-section="honors">Honors</a>
 		<a data-section="experiences">Experiences</a>
 		<a data-section="personal">Personal</a>
-		<a href="Resume.pdf" download="Resume.pdf">Download Resume</a>
+		<a href="Resume.pdf" target="_blank">Download Resume</a>
 		<a data-section="contact">Contact</a>
 	</div>
 	<header id="header">
@@ -177,7 +177,7 @@
 				<li>In 2022, I had the honor of serving as a Teaching Assistant for a data analysis course, where I shared
 					my expertise in Python programming at <a href="https://english.iut.ac.ir/">Isfahan University of Technology</a>.</li>
 				<li>In 2022, Computer Vision Intern at <a href="https://fardafan.com/">Farda Fan Pars</a>.</li>
-				<li>In 2019, Data Analytics Intern at <a href="https://karafsapp.com/">Karafs</a></li>
+				<li>In 2019, Data Analytics Intern at <a href="https://karafsapp.com/">Karafs</a>.</li>
 			</ul>
 		</p>
 	</section>
