--- a/index.htm
+++ b/index.htm
@@ -167,7 +167,7 @@
 	<section id="honors">
 		<h2>Honors</h2>
 		<p>
-			you’ll find all the honors in my resume. Give it a look — I promise, it’s not just graphs and equations!
+			you’ll find all the honors in my <a href="Resume.pdf">resume</a>. Give it a look — I promise, it’s not just graphs and equations!
 		</p>
 	</section>
 	<section id="experiences">
