--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
 		<a data-section="honors">Honors</a>
 		<a data-section="experiences">Experiences</a>
 		<a data-section="personal">Personal</a>
-		<a href="Resume.pdf" target="_blank">Download Resume</a>
+		<a href="Resume.pdf">Download Resume</a>
 		<a data-section="contact">Contact</a>
 	</div>
 	<header id="header">
