--- a/index.htm
+++ b/index.htm
@@ -117,6 +117,8 @@
 		}
 		
 	</style>
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function(event) {
 			var navbarLinks = document.querySelectorAll('.navbar a');
@@ -159,7 +161,7 @@
 		<h1>Iman Mirjafari</h1>
 		<p>👋 Hey there! I’m Iman, your friendly researcher who’s on a mission to combine vision with language — literally.
 			Currently diving into multimodal language models (think of it as teaching machines to be multi-talented) and
-			exploring how they can make sense of medical data.<br>I’m also an <i>"attention"</i> seeker (research-wise, of course), 
+			exploring how they can make sense of medical data.<br>I’m also an <i>"attention"</i> \( \text{softmax}\left(\frac{Q K^T}{\sqrt{d_k}}\right) V \) seeker (research-wise, of course), 
 			looking for optimized ways to reach the peak of machine learning greatness. With a solid mix of stats and computer 
 			science in my toolkit, I'm working to make complex data as understandable as a cat video (almost). </p>
 		</div>
