--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 	<style>
 		body {
 			background-color: black;
-			color: white;
+			color: black;
 			font-family: Arial, sans-serif;
 			margin: 0;
 			padding: 0;
@@ -40,7 +40,7 @@
 		header {
 			position: relative;
 			height: 680px;
-			background-image: url(3.jpg);
+			background-image: url(DALL·E.jpg);
 			background-size: cover;
 			background-position: center;
 			text-align: center;
