--- a/index.htm
+++ b/index.htm
@@ -177,8 +177,8 @@
 		<h2>Experiences</h2>
 		<p>
 			<ul class="bullet-list">
-				<li>Currently, I am working on end-to-end Subset Selection to improve training efficiency and reduce costs, which are key concerns in machine learning. <a href="https://https://ut.ac.ir/en/">University of Tehran</a></li>
-				<li>Since 2024, I have been working on ECG signals with the aim of utilizing end-to-end methods and multimodal models to achieve the highest accuracy in diagnosing cardiac disorders (ongoing). <a href="https://https://ut.ac.ir/en/">University of Tehran</a></li>
+				<li>Currently, I am working on end-to-end Subset Selection to improve training efficiency and reduce costs, which are key concerns in machine learning. <a href="https://ut.ac.ir/en">University of Tehran</a></li>
+				<li>Since 2024, I have been working on ECG signals with the aim of utilizing end-to-end methods and multimodal models to achieve the highest accuracy in diagnosing cardiac disorders (ongoing). <a href="https://ut.ac.ir/en">University of Tehran</a></li>
 				<li>In 2022, I had the honor of serving as a Teaching Assistant for a data analysis course, where I shared
 					my expertise in Python programming at <a href="https://english.iut.ac.ir/">Isfahan University of Technology</a>.</li>
 				<li>In 2022, Computer Vision Intern at <a href="https://fardafan.com/">Farda Fan Pars</a>.</li>
