--- a/index.htm
+++ b/index.htm
@@ -160,12 +160,11 @@
 	<header id="header">
 		<div class="header-content">
 		<h1>Iman Mirjafari</h1>
-		<p>👋 Hey there! I’m Iman, your friendly researcher who’s on a mission to combine vision with language — literally.
-			Currently diving into multimodal language models (think of it as teaching machines to be multi-talented) and
-			exploring how they can make sense of medical data.<br>I’m also an <i>"attention"</i> (\( \text{softmax}\left(\frac{Q K^T}{\sqrt{d_k}}\right) V \)) seeker (research-wise, of course), 
-			looking for optimized ways to reach the peak of machine learning greatness. With a solid mix of stats and computer 
-			science in my toolkit, I'm working to make complex data as understandable as a cat video (almost).<br>I’m a big fan of teamwork and have always pictured myself as part of a collaborative
-			lab group. If your team is looking for a new member, I’d be thrilled to join and bring my enthusiasm along!</p>
+		<p>👋 Hey there! I’m Iman, a Master’s student in Statistics interested in combining vision and language - literally.
+			Currently diving into Multimodal Large Language Models (think of it as teaching machines to be multi-talented) and
+			exploring how they can make sense of real-world.<br>I am interested in Data Analysis, Biostatistics, Machine Learning, Computer Vision, and Natural Language Processing.
+			With a solid mix of stats and computer science in my toolkit, I'm working to make complex data as understandable as a cat video (almost).<br>I am also proficient in TensorFlow
+			and PyTorch frameworks.</p>
 		</div>
 	</header>
 	<section id="honors">
