--- a/index.htm
+++ b/index.htm
@@ -193,8 +193,8 @@
 	</section>
 	<section id="contact">
 		<h2>Contact Me</h2>
-		<p>Currently, I am a master's student at the School of Mathematics, Statistics, and Computer Science of <a href="https://ut.ac.ir/en">Tehran University</a>,
-			and you can contact me using one of the following methods.</p>
+		<p>Currently, I am a master's student at the School of Mathematics, Statistics, and Computer Science of <a href="https://ut.ac.ir/en">University of Tehran</a>, Machine Learning Lab. 
+			You can contact me using one of the following methods.</p>
 		<p>Email: <a href="mailto:iman.mirjafari@ut.ac.ir">iman.mirjafari@ut.ac.ir</a></p>
 		<p>Gmail: <a href="mailto:iman.mirjafari.mj@gmail.com">iman.mirjafari.mj@gmail.com</a></p>
 		<p>Skype: <a href="skype:live:mirjafari.iman?chat">mirjafari.iman</a></p>
